syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "nanorpc/rpc_types.proto";

package arizona_api_service;

message ProductInfo {
  string version = 1;
  string version_string = 2;

  uint32 serial_number = 3;
  string platform = 4;
  string base_model = 5;
  string model = 6;
  string make_and_model = 7;
}

message SoftwarePackage {
	string file_name = 1;
	string full_path = 2;
	string description = 3;
	string version = 4;
	string version_string = 5;
	uint64 file_size = 6;
	uint64 space_required = 7;
	bool usable = 8;
	bool trusted = 9;
	string supported_products = 10;
}

message SoftwarePackageList {
	repeated SoftwarePackage list = 1;
}

service SoftwareUpdateEvents {
	option(nanorpc.event_source) = true;
	rpc PackageListChanged (nanorpc.RpcVoid) returns (nanorpc.RpcVoid);
}

service ProductInfoInterface {
	rpc GetProductInfo (nanorpc.RpcVoid) returns (ProductInfo);
}

service SoftwareUpdateInterface {
	rpc GetAvailablePackages (nanorpc.RpcVoid) returns (SoftwarePackageList);
	rpc StartPackageInstallation (google.protobuf.StringValue) returns (google.protobuf.BoolValue);
	rpc DeletePackage (google.protobuf.StringValue) returns (google.protobuf.BoolValue);
	rpc GetPackageStorePath (nanorpc.RpcVoid) returns (google.protobuf.StringValue);
}

